...
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-medium"
                                android:text="应用缓存"
                                android:textColor="?attr/colorOnSurface"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-medium"
                                android:text="卸载残留"
                                android:textColor="?attr/colorOnSurface"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-medium"
                                android:text="完整深度清理"
                                android:textColor="?attr/colorOnSurface"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
